src/format/snapshots/gd__format__tests__full.snap
---
source: src/format/mod.rs
expression: "f.format(&rows, fmt).unwrap()"
---
address:  00401000
name:     main
size:     78
tags:     [entry, auth]
---
Signature: undefined main(void)
Function:  main

int main() {
  return 0;
}

Parameters:
  int argc (:RDI)

Variables:
  long lVar1 (:RAX)
---
address:   00401010
bytes:     55
loaded:    {"value":"0x1505"}
mnemonic:  PUSH
operands:  [RBP]
---
address:     00118b43
block:       .text
ldr_refs:    []
zero_block:  false
---
address:    00401000
call_site:  00401005
depth:      1
name:       main
