src/format/snapshots/gd__format__tests__minimal.snap
---
source: src/format/mod.rs
expression: "f.format(&rows, fmt).unwrap()"
---
00401000
main
00401010
00118b43
00401000
