src/format/snapshots/gd__format__tests__tree_graph_calls.snap
---
source: src/format/mod.rs
expression: "f.format(&rows, OutputFormat::Tree).unwrap()"
---
main
  helper
    loop_fn
      helper (…)
